--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -19,6 +19,13 @@ table{
   width:100%;
   table-layout: fixed;
 }
+.playerContainer{
+  text-align: center;
+  margin: 15px;
+}
+#player{
+  display: inline-block;
+}
 .tableHeader{
   background-color: rgba(255,255,255,0.3);
 }
